--- a/cmake_targets/CMakeLists.txt
+++ b/cmake_targets/CMakeLists.txt
@@ -1205,6 +1205,45 @@ if(ENABLE_RIC_AGENT)
   set(E2SM_KPM_LIB E2SM_KPM)
   include_directories (${E2SM_KPM_DIR})
 
+  # /*                 RMET-SM             */ # 
+
+  # E2SM_RMET
+  set(RMET_ASN_VERS R01)
+
+
+  if (${RMET_ASN_VERS} STREQUAL R01)
+    set(E2SM_RMET_ASN_FILE e2sm-rmet-v1.asn1)
+  endif (${RMET_ASN_VERS} STREQUAL R01)
+
+  set(E2SM_RMET_DIR ${OPENAIR2_DIR}/RIC_AGENT/E2SM-RMET)
+
+  set(E2SM_RMET_ASN_DIR ${E2SM_RMET_DIR}/MESSAGES/ASN1/${RMET_ASN_VERS})
+  set(E2SM_RMET_C_DIR ${asn1_generated_dir}/E2SM-RMET/)
+  execute_process(
+      COMMAND ${OPENAIR_CMAKE}/tools/make_asn1c_includes.sh "${E2SM_RMET_C_DIR}"
+      "${E2SM_RMET_ASN_DIR}/${E2SM_RMET_ASN_FILE}" "E2SM_RMET_" -fno-include-deps -fincludes-quoted
+      RESULT_VARIABLE ret)
+  if (NOT ${ret} STREQUAL 0)
+      message(FATAL_ERROR "${ret}: error")
+  endif (NOT ${ret} STREQUAL 0)
+  add_custom_target (
+      e2sm_rmet_flag ALL
+      COMMAND ${OPENAIR_CMAKE}/tools/make_asn1c_includes.sh "${E2SM_RMET_C_DIR}"
+      "${E2SM_RMET_ASN_DIR}/${E2SM_RMET_ASN_FILE}" "E2SM_RMET_" -fno-include-deps -fincludes-quoted
+      DEPENDS ${E2SM_RMET_ASN_DIR}/${E2SM_RMET_ASN_FILE})
+  file(GLOB E2SM_RMET_asn_source ${E2SM_RMET_C_DIR}/*.c)
+  add_library(E2SM_RMET_ASN ${E2SM_RMET_asn_source})
+  set(E2SM_RMET_ASN_LIB E2SM_RMET_ASN)
+  include_directories ("${E2SM_RMET_C_DIR}")
+
+  file(GLOB E2SM_RMET_source ${E2SM_RMET_DIR}/*.c)
+  add_library(E2SM_RMET ${E2SM_RMET_source} ${E2SM_RMET_asn_source})
+  set(E2SM_RMET_LIB E2SM_RMET)
+  include_directories (${E2SM_RMET_DIR})
+
+    # /*           end section      RMET-SM             */ # 
+
+
   # RIC_AGENT_LIB
   set(RIC_AGENT_DIR ${OPENAIR2_DIR}/RIC_AGENT)
   file(GLOB RIC_AGENT_source ${RIC_AGENT_DIR}/*.c)
@@ -2727,7 +2766,7 @@ target_link_libraries (lte-softmodem
   PHY_COMMON PHY PHY_RU LFDS L2 L2_LTE NFAPI_COMMON_LIB NFAPI_LIB NFAPI_VNF_LIB NFAPI_PNF_LIB NFAPI_USER_LIB LFDS7
   ${MSC_LIB} ${RAL_LIB} ${NAS_UE_LIB} ${ITTI_LIB} ${FLPT_MSG_LIB}
   ${ASYNC_IF_LIB} ${FLEXRAN_AGENT_LIB} ${E2AP_ASN_LIB} ${E2AP_LIB}
-  ${E2SM_KPM_ASN_LIB} ${E2SM_KPM_LIB} ${E2SM_RSM_LIB} ${RIC_AGENT_LIB} ${FSPT_MSG_LIB} ${PROTO_AGENT_LIB}
+  ${E2SM_KPM_ASN_LIB} ${E2SM_KPM_LIB} ${E2SM_RMET_ASN_LIB} ${E2SM_RMET_LIB} ${E2SM_RSM_LIB} ${RIC_AGENT_LIB} ${FSPT_MSG_LIB} ${PROTO_AGENT_LIB}
   -Wl,--end-group z dl)
   
 target_link_libraries (lte-softmodem ${LIBXML2_LIBRARIES})
@@ -2879,7 +2918,7 @@ target_link_libraries (nr-softmodem
   -Wl,--start-group
   UTIL HASHTABLE SCTP_CLIENT UDP SCHED_LIB SCHED_RU_LIB SCHED_NR_LIB PHY_NR PHY PHY_COMMON PHY_NR_COMMON PHY_RU LFDS NR_GTPV1U SECU_CN SECU_OSA
   ${ITTI_LIB} ${FLPT_MSG_LIB} ${ASYNC_IF_LIB} ${FLEXRAN_AGENT_LIB}
-  ${E2AP_ASN_LIB} ${E2AP_LIB} ${E2SM_KPM_ASN_LIB} ${E2SM_KPM_LIB} ${E2SM_RSM_LIB} ${RIC_AGENT_LIB}
+  ${E2AP_ASN_LIB} ${E2AP_LIB} ${E2SM_KPM_ASN_LIB} ${E2SM_KPM_LIB} ${E2SM_RMET_ASN_LIB} ${E2SM_RMET_LIB} ${E2SM_RSM_LIB} ${RIC_AGENT_LIB}
   LFDS7 ${MSC_LIB} ${RAL_LIB} ${NAS_UE_LIB} RRC_LIB NR_RRC_LIB 
   S1AP_LIB S1AP_ENB L2 L2_NR MAC_NR_COMMON NFAPI_COMMON_LIB NFAPI_LIB NFAPI_VNF_LIB NFAPI_PNF_LIB NFAPI_USER_LIB
   X2AP_LIB X2AP_ENB F1AP_LIB F1AP M2AP_LIB M2AP_ENB M3AP_LIB M3AP_ENB ${PROTO_AGENT_LIB} ${FSPT_MSG_LIB}
@@ -3223,7 +3262,7 @@ if (${T_TRACER})
         params_libconfig oai_exmimodevif oai_usrpdevif oai_bladerfdevif oai_lmssdrdevif oai_iqplayer
         oai_eth_transpro oai_mobipass tcp_bridge tcp_bridge_oai
         coding FLPT_MSG ASYNC_IF FLEXRAN_AGENT
-        ${E2AP_ASN_LIB} ${E2AP_LIB} ${E2SM_KPM_ASN_LIB} ${E2SM_KPM_LIB} ${E2SM_RSM_LIB} ${RIC_AGENT_LIB}
+        ${E2AP_ASN_LIB} ${E2AP_LIB} ${E2SM_KPM_ASN_LIB} ${E2SM_KPM_LIB} ${E2SM_RMET_ASN_LIB} ${E2SM_RMET_LIB} ${E2SM_RSM_LIB} ${RIC_AGENT_LIB}
         HASHTABLE MSC UTIL OMG_SUMO
         SECU_OSA SECU_CN SCHED_LIB SCHED_NR_LIB SCHED_RU_LIB SCHED_UE_LIB SCHED_NR_UE_LIB default_sched remote_sched RAL
         NFAPI_COMMON_LIB NFAPI_LIB NFAPI_PNF_LIB NFAPI_VNF_LIB NFAPI_USER_LIB
